# social-media-app

./: .env  .env.example  DockerFile  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/auth/: dependencies.py
app/config/: setup.py
app/core/: database.py  dependencies.py  dependency.py  exception.py  handler.py  helper.py  security.py  settings.py  utils.py
app/exceptions/: exception.py  handler.py
app/models/: __init__.py  comment.py  post.py  refresh_token.py  user.py
app/repositories/: comment.py  post.py  user.py
app/routers/: ai.py  comment.py  post.py  user.py
app/schemas/: comment.py  post.py  user.py
app/services/: comment.py  post.py  user.py
app/utils/: email_msg.py  task.py
fastapi/: Dockerfile
migrations/: env.py
migrations/versions/: 33178971c5cc_changed_the_email_to_be_nullable.py  65558a259264_fixed_is_deleted_default_value.py  6af490d78184_changed_the_email_to_be_nullable.py  6f5a2b95e2ad_added_comment_table.py  99b5440f87a2_added_deleted_at_to_users_table.py  a0011eff4cce_changed_the_email_to_be_nullable.py  ddd4aa130dc4_added_comment_table.py
