[project]
name = "social-media"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "arq>=0.27.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.133.1",
    "psycopg2>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic==2.12.5",
    "pyjwt>=2.11.0",
    "redis>=5.3.1",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]
